# bypasscore-sdk

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
bindings/python/: pybypasscore.cpp  setup.py
docs/: api_overview.md  hooking_guide.md
examples/: hook_messagebox.cpp  parse_pe.cpp  scan_pattern.cpp
include/bypasscore/: bypasscore.h  version.h
include/bypasscore/binary/: disasm.h  pe.h  reloc.h
include/bypasscore/hook/: detour.h  engine.h  iat_hook.h  syscall_hook.h  trampoline.h  vmt_hook.h
include/bypasscore/memory/: allocator.h  patch.h  protection.h  region.h  scanner.h
include/bypasscore/platform/: arch.h  ntapi.h  os.h
include/bypasscore/process/: module.h  process.h  thread.h  token.h
include/bypasscore/util/: hash.h  logger.h  result.h  scope_guard.h
src/: bypasscore.cpp
src/binary/: pe.cpp
src/hook/: engine.cpp
src/memory/: region.cpp  scanner.cpp
tests/: test_disasm.cpp  test_hooks.cpp  test_pe.cpp  test_scanner.cpp
tools/: bc_dump.cpp  bc_scan.cpp
